[package]
name = "kafkaconsumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
tokio = { version = "1.1.0", features = ["macros", "rt-multi-thread", "time"] }
clap = {version = "3.1.1", features = ["env"] }
log = "0.4.13"
env_logger="0.9.0"

